Remove hard-coded config variables from theme

--- a/themes/pure/templates/social.html
+++ b/themes/pure/templates/social.html
@@ -1,9 +1,9 @@
 <ul>
     {% for icon, url in [
-        ('twitter', 'https://twitter.com/cyrillerossant'),
-        ('github', 'https://github.com/rossant'),
-        ('linkedin', 'https://www.linkedin.com/in/crossant'),
-        ('rss', '/feeds/atom.xml'),
+        ('twitter', 'https://twitter.com/%s' % TWITTER_USERNAME),
+        ('github', 'https://github.com/%s' % GITHUB_USERNAME),
+        ('linkedin', 'https://www.linkedin.com/in/%s' % LINKEDIN_USERNAME),
+        ('rss', '%s/%s' % (FEED_DOMAIN, FEED_ALL_ATOM)),
     ] %}
         <li><a href="{{ url }}"><i class="fa fa-{{ icon }}"></i></a></li>
     {% endfor %}
