--- a/themes/pure/templates/disqus.html
+++ b/themes/pure/templates/disqus.html
@@ -9,8 +9,8 @@
      */
 
     var disqus_config = function () {
-        this.page.url = {{ url }};  // Replace PAGE_URL with your page's canonical URL variable
-        this.page.identifier = {{ slug }}; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        this.page.url = "{{ SITEURL }}/{{ article.url }}";  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = "{{ article.slug }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
 
     (function() {  // DON'T EDIT BELOW THIS LINE
