--- a/themes/pure/templates/sc.html
+++ b/themes/pure/templates/sc.html
@@ -1,14 +1,17 @@
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
-var sc_project={{ STATCOUNTER }};
+var sc_project=7297581;
 var sc_invisible=1;
 var sc_security="e9e753f7";
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
 </script>
-<script type="text/javascript"
-src="http://www.statcounter.com/counter/counter.js"></script>
-<noscript><div class="statcounter"><a title="shopify
-analytics ecommerce" href="http://statcounter.com/shopify/"
+<noscript><div class="statcounter"><a title="shopify site
+analytics" href="http://statcounter.com/shopify/"
 target="_blank"><img class="statcounter"
-src="http://c.statcounter.com/{{ STATCOUNTER }}/0/e9e753f7/1/"
-alt="shopify analytics ecommerce"></a></div></noscript>
+src="http://c.statcounter.com/7297581/0/e9e753f7/1/"
+alt="shopify site analytics"></a></div></noscript>
 <!-- End of StatCounter Code for Default Guide -->
