--- a/themes/pure/templates/sidebar.html
+++ b/themes/pure/templates/sidebar.html
@@ -1,11 +1,15 @@
 <section>
 	<div class="portrait">
-		<!-- <div class="circular"> -->
 			<img src="/theme/images/cr.jpg" />
-		<!-- </div> -->
 	</div>
-	<div class="name">Cyrille Rossant, PhD</div>
-	<div class="sub-name">data | software | neuroscience</div>
+    <div class="name-cv">
+        <div class="name">Cyrille Rossant, PhD</div>
+        <div class="cv">
+            <a href="/pdfs/cv.pdf"><i class="fa fa-file-pdf-o"></i> CV</a>
+        </div>
+    </div>
+    <div class="clear"></div>
+    <div class="sub-name">data | software | neuroscience</div>
 	<div class="contact"><i>first</i>.<i>last</i>@gmail.com</div>
 	<div class="location">Paris, France</div>
 </section>
