--- a/themes/pure/templates/sidebar.html
+++ b/themes/pure/templates/sidebar.html
@@ -4,9 +4,9 @@
 	</div>
     <div class="name-cv">
         <div class="name">Cyrille Rossant, PhD</div>
-        <div class="cv">
+<!--         <div class="cv">
             <a href="/pdfs/cv.pdf"><i class="fa fa-file-pdf-o"></i> CV</a>
-        </div>
+        </div> -->
     </div>
     <div class="clear"></div>
     <div class="sub-name">data | software | neuroscience</div>
