--- a/themes/pure/static/css/styles.css
+++ b/themes/pure/static/css/styles.css
@@ -13,6 +13,10 @@ html, button, input, select, textarea,
     color: #000;
 }
 
+strong {
+    font-weight: 500;
+}
+
 #layout, #header {
     margin: 0 auto;
     padding: 0 2em;
