--- a/themes/pure/templates/sidebar.html
+++ b/themes/pure/templates/sidebar.html
@@ -1,7 +1,13 @@
+
 <section>
-	<div class="portrait">
-			<img src="/theme/images/cr.jpg" />
+ 	<div class="portrait">
+		<a href="https://rendeznousnotrebebe.wordpress.com/english/"><img src="/theme/images/david.jpg" /></a>
 	</div>
+    <div class="baby">
+    <a href="https://rendeznousnotrebebe.wordpress.com/english/">Give me my baby back!</a>
+    </div>
+
+
     <div class="name-cv">
         <div class="name">Cyrille Rossant, PhD</div>
         <div class="cv">
