--- a/themes/pure/templates/sidebar.html
+++ b/themes/pure/templates/sidebar.html
@@ -1,7 +1,7 @@
 <section>
-	<div class="portrait">
-			<img src="/theme/images/cr.jpg" />
-	</div>
+    <div class="portrait">
+            <img src="/theme/images/cr.jpg" />
+    </div>
     <div class="name-cv">
         <div class="name">Cyrille Rossant, PhD</div>
         <div class="cv">
@@ -10,14 +10,15 @@
     </div>
     <div class="clear"></div>
     <div class="sub-name">data | software | neuroscience</div>
-	<div class="contact"><i>first</i>.<i>last</i>@gmail.com</div>
-	<div class="location">Paris, France</div>
+    <div class="contact"><i>first</i>.<i>last</i>@gmail.com</div>
+    <div class="location">Paris, France</div>
 </section>
 
 <section class="tags">
 {% for tag in [
-				'python',
-				'dataviz',
+                'neuroscience',
+                'python',
+                'dataviz',
                 'maths',
                 'gpu',
                 'opendata',
@@ -28,15 +29,15 @@
 
 
 <section class="books">
-	<header><h3>books</h3></header>
+    <header><h3>books</h3></header>
     <div class="sub-header">Two books on <strong>Python for data science</strong></div>
-	<div class="book-1"><a href="/books/#minibook"><img src="/images/minibook.jpg"/></a></div>
-	<div class="book-2"><a href="/books/#cookbook"><img src="/images/cookbook.jpg"/></a></div>
+    <div class="book-1"><a href="/books/#minibook"><img src="/images/minibook.jpg"/></a></div>
+    <div class="book-2"><a href="/books/#cookbook"><img src="/images/cookbook.jpg"/></a></div>
 </section>
 
 
 <!-- <section class="search">
-	<script>
+    <script>
   (function() {
     var cx = '006027474294305969173:cpp1rvft78s';
     var gcse = document.createElement('script');
