--- a/themes/pure/templates/sidebar.html
+++ b/themes/pure/templates/sidebar.html
@@ -3,26 +3,19 @@
             <img src="/theme/images/cr.jpg" />
     </div>
     <div class="name-cv">
-        <div class="name">Cyrille Rossant, PhD</div>
+        <div class="name">{{ SIDEBAR_NAME }}</div>
         <div class="cv">
             <a href="/pdfs/cv.pdf"><i class="fa fa-file-pdf-o"></i> CV</a>
         </div>
     </div>
     <div class="clear"></div>
-    <div class="sub-name">data | software | neuroscience</div>
-    <div class="contact"><i>first</i>.<i>last</i>@gmail.com</div>
-    <div class="location">Paris, France</div>
+    <div class="sub-name">{{ SIDEBAR_SUBNAME }}</div>
+    <div class="contact">{{ SIDEBAR_EMAIL }}</div>
+    <div class="location">{{ SIDEBAR_LOCATION }}</div>
 </section>
 
 <section class="tags">
-{% for tag in [
-                'neuroscience',
-                'python',
-                'dataviz',
-                'maths',
-                'gpu',
-                'opendata',
-                ] %}
+{% for tag in SIDEBAR_TAGS %}
     <span class="tag"><a href="/tag/{{ tag }}/">#{{ tag }}</a></span>
 {% endfor %}
 </section>
