Add cookbook second edition

--- a/themes/pure/templates/sidebar.html
+++ b/themes/pure/templates/sidebar.html
@@ -23,8 +23,8 @@
 <section class="books">
     <header><h3>books</h3></header>
     <div class="sub-header">Two books on <strong>Python for data science</strong></div>
-    <div class="book-1"><a href="/books/#minibook"><img src="/images/minibook.jpg"/></a></div>
-    <div class="book-2"><a href="/books/#cookbook"><img src="/images/cookbook.jpg"/></a></div>
+    <div class="book-1"><a href="/books/#minibook"><img src="/images/minibook.png"/></a></div>
+    <div class="book-2"><a href="/books/#cookbook"><img src="/images/cookbook.png"/></a></div>
 </section>
 
 
