--- a/themes/pure/static/css/styles.css
+++ b/themes/pure/static/css/styles.css
@@ -398,6 +398,30 @@ code {
 
 
 
+#post h2 a:hover::after,
+#post h3 a:hover::after {
+    display: inline-block;
+    background: url(https://upload.wikimedia.org/wikipedia/commons/d/de/Simpleicons_Interface_link-symbol.svg);
+    content: "";
+    background-size: 20px 20px;
+    margin-left: 10px;
+    width: 20px;
+    height: 20px;
+    opacity: 0.666;
+}
+
+#post h3 a:hover::after {
+    background-size: 15px 15px;
+    width: 15px;
+    height: 15px;
+}
+
+#post h2 a,
+#post h3 a {
+    color: #555;
+}
+
+
 /***** IPYNB INPUT OUTPUT ******/
 .ipynb-input .highlight pre {
     margin: 0;
