--- a/themes/pure/static/css/styles.css
+++ b/themes/pure/static/css/styles.css
@@ -222,6 +222,17 @@ iframe {
     border: 0;
 }
 
+#sidebar .medias {
+    font-size: .9em;
+}
+
+#sidebar .medias img {
+    width: 100%;
+    height: 100px;
+    object-fit: cover;
+    object-position: 0 28%;
+}
+
 
 
 
