--- a/themes/pure/static/css/styles.css
+++ b/themes/pure/static/css/styles.css
@@ -407,6 +407,13 @@ code {
     border-bottom: 1px solid #ccc;
 }
 
+#post span.highlight {
+    background-color: #ffffd0;
+    color: #000;
+    padding: 0 6px 0 0;
+    margin: 0;
+}
+
 
 
 #post h2 a:hover::after,
